--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! Fuck!</h1>
+<h1>Hello Coursera! finna doo!</h1>
 </body>
 </html>
