--- a/examples/Lecture05/test1.html
+++ b/examples/Lecture05/test1.html
@@ -5,7 +5,7 @@
   <title>div and span elements</title>
 </head>
 <body>
-  <div>*** DIV 1: Some content fucku ***</div>
+  <div>*** DIV 1: Some content fucku2 ***</div>
   <div>*** DIV 2: Following right after div 1 ***</div>
   <span>*** SPAN 1: Following right after div 2 ***</span>
   <div>
