--- a/examples/Lecture06/headings.html
+++ b/examples/Lecture06/headings.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>This is the Main Heading</h1>
-  <h2>Subheading 2</h2>
+  <h2>Subheading 2 biznizaaatch</h2>
   <h3>Subheading 3</h3>
   <h4>Subheading 4</h4>
   <h5>Subheading 5</h5>
