Finished module2-solution assignment. Successful html and css validation, yay!

--- a/assignments/module2-solution/index.html
+++ b/assignments/module2-solution/index.html
@@ -1,37 +1,49 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="CSS/datswagger.css">
-<title> Our Menu </title>
+  <link rel="stylesheet" href="CSS/datswagger.css">
+<title> Our Menu assignment </title>
 <style>
 </style>
 </head>
 
 <body>
+  <header>This is a header</header>
+
   <div class="row">
     <div class="col-lg-4 col-md-6 col-sm-12">
-      <section>
-        <section id="sectionTitle">Chicken</section>
-        Item 1
+      <section id="p1">
+        <h1 class="sectionTitle">Section</h1> 
+        My issue isn't televised, and you ain't gotta tell the wise
+        <br>How to stay on beat, because our life's an instrumental
+        <br>This is physical and mental, I won't sugar coat it
+        <br>You'd die from diabetes if these other n***** wrote it
       </section>
     </div>
 
     <div class="col-lg-4 col-md-6 col-sm-12">
-      <section>
-        <section id="sectionTitle">Beef</section>
-        Item 2
+      <section id="p2">
+        <h2 class="sectionTitle">.80</h2> 
+        My issue isn't televised, and you ain't gotta tell the wise
+        <br>How to stay on beat, because our life's an instrumental
+        <br>This is physical and mental, I won't sugar coat it
+        <br>You'd die from diabetes if these other n***** wrote it
       </section>
     </div>
 
-    <div class="col-lg-4 col-md-6 col-sm-12">
-    <section>
-        <section id="sectionTitle">Sushi</section>
-        Item 3
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <section id="p3">
+        <h3 class="sectionTitle">Hiiipower</h3> 
+        My issue isn't televised, and you ain't gotta tell the wise
+        <br>How to stay on beat, because our life's an instrumental
+        <br>This is physical and mental, I won't sugar coat it
+        <br>You'd die from diabetes if these other n***** wrote it
       </section>
     </div>
 
   </div>
 </body>
+
 </html>
