changed borders from 2px to 1px

--- a/assignments/module2-solution/index.html
+++ b/assignments/module2-solution/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header>This is a header</header>
+  <header>Love Kendrick Lamar</header>
 
   <div class="row">
     <div class="col-lg-4 col-md-6 col-sm-12">
