added glyphicon arrow to back to page <a>

--- a/assignments/module3-solution/index.html
+++ b/assignments/module3-solution/index.html
@@ -83,7 +83,10 @@
           <br>Tell me how much a dollar cost
         </p>
       </section>
-      <a href="#header-nav" class="visible-xs visible-sm">Back to top</a>
+      <a href="#header-nav" class="visible-xs visible-sm">
+        <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+         Back to top
+      </a>
     </div>
 
     <div class="col-lg-4 col-md-6 col-sm-12">
@@ -110,7 +113,10 @@
           <br>Tell me how much a dollar cost
         </p>
       </section>
-      <a href="#header-nav" class="visible-xs visible-sm">Back to top</a>
+      <a href="#header-nav" class="visible-xs visible-sm">
+        <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+         Back to top
+      </a>
     </div>
 
     <div class="col-lg-4 col-md-12 col-sm-12">
@@ -143,7 +149,10 @@
           <br>The price of having a spot in Heaven, embrace your loss, I am God"
         </p>
       </section>
-      <a href="#header-nav" class="visible-xs visible-sm">Back to top</a>
+      <a href="#header-nav" class="visible-xs visible-sm">
+        <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+         Back to top
+      </a>
     </div>
     </div><!-- End of #home-tiles -->
   </div><!-- End of #main-content -->
