removed unnecessary jumbotron and adjust texts' to accomadte change

--- a/assignments/module3-solution/index.html
+++ b/assignments/module3-solution/index.html
@@ -46,14 +46,12 @@
   </header>
 
   <div id="main-content" class="container-fluid">
-    <div class="jumbotron">
-      <p class="text-center">Our Menu</p>
-    </div>
+    <h2 class="text-center">Our Menu</h2>
     
     <div class="row">
       <div class="col-lg-4 col-md-6 col-sm-12">
       <section id="section1">
-        <h2 class="text-center sectionTitle">Chicken</h2> 
+        <h3 class="text-center sectionTitle">Chicken</h3> 
         <p>
           How much a dollar really cost?
           <br>The question is detrimental, paralyzin' my thoughts
@@ -91,7 +89,7 @@
 
     <div class="col-lg-4 col-md-6 col-sm-12">
       <section id="section2">
-        <h3 class="text-center sectionTitle">Beef</h3> 
+        <h4 class="text-center sectionTitle">Beef</h4> 
         <p>
           He's starin' at me in disbelief
           <br>My temper is buildin', he's starin' at me, I grab my key
@@ -121,7 +119,7 @@
 
     <div class="col-lg-4 col-md-12 col-sm-12">
       <section id="section3">
-        <h4 class="text-center sectionTitle">Sushi</h4> 
+        <h5 class="text-center sectionTitle">Sushi</h5> 
         <p>
           Guilt trippin' and feelin' resentment
           <br>I never met a transient that demanded attention
